fix overflow bottom of page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,13 +6,22 @@ html {
     height: 100%;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 #navbar {
     background-color: #1d3e53;
     height: 3.5em;
     padding-left: 2em;
     padding-right: 2em;
     border-bottom: black solid 1px;
-    position: relative;
+    position: absolute;
     color: #f5f5f5;
     letter-spacing: .1em;
 }
@@ -33,12 +42,10 @@ html {
 
 #main-content {
     position: absolute;
-    height: 100%;
     width: 100%;
     top: 3.5em;
     bottom: 0;
-    /*background-color: #77abb7;*/
-    /*background-color: white;*/
+    background-color: #77abb7;
     overflow-y: scroll;
 }
 
